TimeAdministrator/cluster/workquota-svc/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workquota-svc
  namespace: adtd
  labels:
    svc: workquota
spec:
  ports:
  - port: 5020
    protocol: TCP
  selector:
    svc: workquota
