TimeAdministrator/cluster/workquota-svc/03-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: workquota-api-ingress
  namespace: adtd
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/rewrite-target: /v1/daily
spec:
  tls:
    - hosts:
      - adtd.docugate.ch
      secretName: adtd-api-tls
  rules:
  - host: adtd.docugate.ch
    http:
      paths:
      - path: /v1/daily
        backend:
          serviceName: workquota-svc
          servicePort: 5020
